*gputils-1.4.0_p1 (24 Sep 2015)

  24 Sep 2015; Antonio Serrano Hernandez <toni.serranoh@gmail.com> :
  New version.
