@@ -1,6 +1,7 @@
 DIST picc-0.1.0.tar.bz2 21639 SHA256 f18e6404d4aa47c1945f4219e0efb6d6d2f7752f7f8a849094f29b7d48acda8a SHA512 bb2ba5d6f400cb52a41ce21694fe3f4fe09ad67f186a0ec4d9a0585b694e3f724ae792ba996d5519fbb36ca29a6a4b8dc32fa0329a0ce5fcf3f8801d4caf3a47 WHIRLPOOL 8bd63ffcf4a6cc7a62c76b339594a4554dd4c4d81d44dcabf7ad5c447502ef829625fcd6720f6a3ee5a2a7c032430309f85f907605dbf6fc1d1005dc3b905589
 DIST picc-0.2.0.tar.bz2 22673 SHA256 33828a6a454bc88ee2fafad60c8dcb76c284b7fc6e749a3e65fd872f109f0a5c SHA512 7096247a9e174dfff2fc7e3a891a5af42294a09973ee21ffeacb3905cf7b9e748ce514e98557bd46e64fdccded644496a2887a631eac37138528e9932d57f19d WHIRLPOOL 7cdf590e9a0cdddd15bcf9efa77b2952dd5be2bf16536e1ad8d710cbfa674e8d4b8a448b3af225422850e88ba606d53b51528d213bac8120a15eb6b78021dc90
-DIST picc-0.2.1.tar.bz2 22654 SHA256 5522a39f86010e431ced8d486be7d31700720338782a6ce8075aba71857f4dcd SHA512 cc60f8eaba7888ed6d7cd5b6279ee11c40ae075a791a6127494821dbaca3f091b76cf95b7316776ff28d6a761c08b903d0d97d8e8572629711a1c442f3cfb4c8 WHIRLPOOL e42263a635d200f37f6c911cd5455d75f857c77c21b318bd730eee58da5e48a01a7125286925abde6365f100e1089ec12e7ff694a6405d3431579d21e7b0e78b
+DIST picc-0.2.2.tar.bz2 22787 SHA256 4642f2866eacdaa9446d181687a2976ac4d0c1190d3bd0dfb9d2d298953c397a SHA512 d09db373f57c56688b7130591b760f63062548521b10f4f9f776f06e243d620619c2ae3c3782a5070c63f4452666f219356916073674177c45e979fa25b7c612 WHIRLPOOL 3e08bc5c93ea9d077d9d01b8b02a77d87063a534a891427b4a497401084a7410bbaf0e9c74a31d5e5badf47c9020ebac9741ba59e60eebc3c6f9d932501cb326
 EBUILD picc-0.1.0.ebuild 560 SHA256 aade87c6f5442268c67a27d95f0a1dc7539fcae6962cd34efa1c7441694f2633 SHA512 95e670597223bab52d64d252f3c692028d95b0fa78a5241d9342c3eca0e2d76c742182ee553602aad00cff0f86e000ed48d6085173870b8a5db8b14524820a7b WHIRLPOOL a0395db89e2377c67985795bd2957c50ee8d3a03975ca402fec75e324234af69c666a25ceec794c17ede34bc9a459b9525dc139315e53d0a002a4edfb0985260
 EBUILD picc-0.2.0.ebuild 560 SHA256 aade87c6f5442268c67a27d95f0a1dc7539fcae6962cd34efa1c7441694f2633 SHA512 95e670597223bab52d64d252f3c692028d95b0fa78a5241d9342c3eca0e2d76c742182ee553602aad00cff0f86e000ed48d6085173870b8a5db8b14524820a7b WHIRLPOOL a0395db89e2377c67985795bd2957c50ee8d3a03975ca402fec75e324234af69c666a25ceec794c17ede34bc9a459b9525dc139315e53d0a002a4edfb0985260
-EBUILD picc-0.2.1.ebuild 560 SHA256 aade87c6f5442268c67a27d95f0a1dc7539fcae6962cd34efa1c7441694f2633 SHA512 95e670597223bab52d64d252f3c692028d95b0fa78a5241d9342c3eca0e2d76c742182ee553602aad00cff0f86e000ed48d6085173870b8a5db8b14524820a7b WHIRLPOOL a0395db89e2377c67985795bd2957c50ee8d3a03975ca402fec75e324234af69c666a25ceec794c17ede34bc9a459b9525dc139315e53d0a002a4edfb0985260
+EBUILD picc-0.2.2.ebuild 463 SHA256 bbb14b571b5f99364ef024d96a713a57536e73748b2e42d061ece858784e2be3 SHA512 6cf291dd5428da3e07f2668bc42c9cc22465b4ecef505baae3ba03447af2c22f24b8735f656bdc41020709aa561f9dfae94c800d171672ff3c3b82252809f435 WHIRLPOOL 83f69fa279239b64d1449a76c37d324a577a80d84f9ca59240feab3a98186bc980100fa12d0b5b3a8bb3a6a8e354f38e049e70049a2555d00be40a095d0d77bd
+MISC ChangeLog 155 SHA256 9172772a643cd362da46816f189aa09ce1719c917c01e303ed6fc056facee1b1 SHA512 15f521e7d2f41b621a6b8c9e5abd7121c4d4d5210ef9eee597390b840a054b30207edc041916570ca6e64d770f5a170daaa790592f72263ff5c13220621a224a WHIRLPOOL 9d0c5f74fbcf94d996d3f318658378dd691f7850cc6dfd64503f3f007dd90d222c414e25e18c55fdbb223dc4c5044f40073b557bad19d2063551d872f79d7463
