@@ -1,0 +1,2 @@
+EBUILD raspberrypi-sources-4.4.9999.ebuild 598 SHA256 ce27b53cf33830767dfff033852e0e4fc6475713e8c06b83f2f87e6862bb3ba3 SHA512 97bb467ef995aa3a9507ebd7c39bc543d2bd12e10a4ccb0c18a7beeb9a44b5f01fb8ad48ff3e9296e3f2fad6789bc947d13e750141e0ba5f60525d0ee8d44065 WHIRLPOOL a789e3de65908251d5567d625c1b21547cf1242aeb218d9685f61d52ec1e4a174df831a870227d2a3933e9473a17df5f4e4ecf6fbaa251f9437ee5f4cef8dbad
+MISC ChangeLog 149 SHA256 ca8c51ddae286dcfebb078f2c673e77d1ffb2315df9f39a23bcb6458ee9fecc5 SHA512 554b792b7a77641d970e37f4a4a71759727885b3bd8bf65ebe6351aa9e9bb21b774e133129cbcd22bade24b2faf4ff9af5c6d4d46525e06c88669150d9a830e0 WHIRLPOOL 987815e9b3cd0ec0ed2cd4ae3eaa89c3b1702d31659ac59bdece29f74ffc168ec9fa0a3113b15b336fe1ea97176764f7e0957388e5293c8d5e0fa1ce2f7e3941
