@@ -1,0 +1,6 @@
+pic-0.2.2 (24 Apr 2016)
+
+  24 Apr 2016; Antonio Serrano <toni.serranoh@gmail.com> :
+  Added picc-0.2.2.ebuild.
+  Removed buggy version picc-0.2.1.ebuild.
+
