@@ -1,4 +1,7 @@
-*gputils-1.4.0_p1 (24 Sep 2015)
+*gputils-1.4.0_p1 (24 Apr 2016)
+
+  24 Apr 2016; Antonio Serrano Hernandez <toni.serranoh@gmail.com> :
+  Added ~arm keyword.
 
   24 Sep 2015; Antonio Serrano Hernandez <toni.serranoh@gmail.com> :
   New version.
